完成软件分享界面设计

--- a/docs/00.目录页/01.导航大全.md
+++ b/docs/00.目录页/01.导航大全.md
@@ -4,7 +4,7 @@ pageComponent:
   data: 
     key: 01.导航大全
     imgUrl: /img/web.png
-    description: JavaScript、ES6、Vue框架等前端技术
+    description: 一些精品宝藏网站推荐
 title: 导航大全
 date: 2021-12-19 21:50:53
 permalink: /nav
