--- a/docs/00.目录页/04.视频分享.md
+++ b/docs/00.目录页/04.视频分享.md
@@ -4,7 +4,7 @@ pageComponent:
   data: 
     key: 04.视频分享
     imgUrl: /img/more.png
-    description: 学习、面试、在线工具等更多文章和页面
+    description: 学习、教程、在线工具等视频
 title: 视频分享
 date: 2021-12-19 21:50:56
 permalink: /video
