--- a/docs/00.目录页/02.软件分享.md
+++ b/docs/00.目录页/02.软件分享.md
@@ -4,7 +4,7 @@ pageComponent:
   data: 
     key: 02.软件分享
     imgUrl: /img/ui.png
-    description: html(5)/css(3)，前端页面相关技术
+    description: Windows，Android，iOS等平台精品软件推荐
 title: 软件分享
 date: 2021-12-19 21:50:54
 permalink: /software
