--- a/docs/03.文章分享/01.技术文档/03.npm常用命令.md
+++ b/docs/03.文章分享/01.技术文档/03.npm常用命令.md
@@ -8,8 +8,8 @@ categories:
 tags: 
   - null
 author: 
-  name: xugaoyi
-  link: https://github.com/xugaoyi
+  name: LFJINGT
+  link: https://github.com/LFJINGT
 ---
 # npm常用命令
 
