--- a/docs/03.文章分享/02.GitHub技巧/10.GitHub加速下载项目的方法.md
+++ b/docs/03.文章分享/02.GitHub技巧/10.GitHub加速下载项目的方法.md
@@ -8,8 +8,9 @@ categories:
 tags: 
   - null
 author: 
-  name: xugaoyi
-  link: https://github.com/xugaoyi
+author: 
+  name: LFJINGT
+  link: https://github.com/LFJINGT
 ---
 # GitHub加速下载项目的方法
 
