--- a/docs/03.文章分享/02.GitHub技巧/01.GitHub高级搜索技巧.md
+++ b/docs/03.文章分享/02.GitHub技巧/01.GitHub高级搜索技巧.md
@@ -8,8 +8,8 @@ categories:
 tags: 
   - null
 author: 
-  name: xugaoyi
-  link: https://github.com/xugaoyi
+  name: LFJINGT
+  link: https://github.com/LFJINGT
 ---
 # GitHub高级搜索技巧	
 
