--- a/docs/03.文章分享/02.GitHub技巧/02.GitHub Actions 实现自动部署静态博客.md
+++ b/docs/03.文章分享/02.GitHub技巧/02.GitHub Actions 实现自动部署静态博客.md
@@ -8,8 +8,8 @@ categories:
 tags: 
   - null
 author: 
-  name: xugaoyi
-  link: https://github.com/xugaoyi
+  name: LFJINGT
+  link: https://github.com/LFJINGT
 ---
 #  GitHub Actions 实现自动部署静态博客
 
