--- a/docs/03.文章分享/02.GitHub技巧/03.GitHub Actions 定时运行代码：每天定时百度链接推送.md
+++ b/docs/03.文章分享/02.GitHub技巧/03.GitHub Actions 定时运行代码：每天定时百度链接推送.md
@@ -9,8 +9,8 @@ tags:
   - github
   - 博客
 author: 
-  name: xugaoyi
-  link: https://github.com/xugaoyi
+  name: LFJINGT
+  link: https://github.com/LFJINGT
 ---
 #  GitHub Actions 定时运行代码：每天定时百度链接推送
 
