--- a/docs/03.文章分享/03.Nodejs/01.nodejs递归读取所有文件.md
+++ b/docs/03.文章分享/03.Nodejs/01.nodejs递归读取所有文件.md
@@ -8,8 +8,8 @@ categories:
 tags: 
   - null
 author: 
-  name: xugaoyi
-  link: https://github.com/xugaoyi
+  name: LFJINGT
+  link: https://github.com/LFJINGT
 ---
 # nodejs递归读取所有文件
 ```js
