完成视频页优化

--- a/docs/04.视频分享/02.c语言编程 C语言入门 c语言.md
+++ b/docs/04.视频分享/02.c语言编程 C语言入门 c语言.md
@@ -9,5 +9,5 @@ tags:
 ---
 # c语言编程 C语言入门 c语言
 
-<iframe src="//player.bilibili.com/player.html?aid=841359457&bvid=BV1q54y1q79w&cid=270852639&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<iframe src="//player.bilibili.com/player.html?aid=841359457&bvid=BV1q54y1q79w&cid=270852639&page=1&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 100%; height: 30rem; max-width: 100%；align:center; padding:20px 0;"> </iframe>
 
