--- a/docs/04.视频分享/03.【零基础入门】萌新如何从0开始学Python编程到入职，Python基础教程全集.md
+++ b/docs/04.视频分享/03.【零基础入门】萌新如何从0开始学Python编程到入职，Python基础教程全集.md
@@ -9,5 +9,5 @@ tags:
 ---
 # 【零基础入门】萌新如何从0开始学Python编程到入职，Python基础教程全集
 
-<iframe src="//player.bilibili.com/player.html?aid=208608319&bvid=BV1Th411n76E&cid=424955468&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<iframe src="//player.bilibili.com/player.html?aid=208608319&bvid=BV1Th411n76E&cid=424955468&page=1&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 100%; height: 30rem; max-width: 100%；align:center; padding:20px 0;"> </iframe>
 
