--- a/docs/04.视频分享/04.C#编程-第一季-编程基础-宇宙最简单2021最新版.md
+++ b/docs/04.视频分享/04.C#编程-第一季-编程基础-宇宙最简单2021最新版.md
@@ -9,5 +9,5 @@ tags:
 ---
 # C#编程-第一季-编程基础-宇宙最简单2021最新版
 
-<iframe src="//player.bilibili.com/player.html?aid=336849118&bvid=BV1gR4y1b7oW&cid=445484413&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<iframe src="//player.bilibili.com/player.html?aid=336849118&bvid=BV1gR4y1b7oW&cid=445484413&page=1&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 100%; height: 30rem; max-width: 100%；align:center; padding:20px 0;"> </iframe>
 
