--- a/docs/04.视频分享/05.耗时600小时整理《Python教程全套》完全入门版，分享一起学习_高清附字幕 (Python编程开发).md
+++ b/docs/04.视频分享/05.耗时600小时整理《Python教程全套》完全入门版，分享一起学习_高清附字幕 (Python编程开发).md
@@ -9,4 +9,4 @@ tags:
 ---
 # 耗时600小时整理《Python教程全套》完全入门版，分享一起学习_高清附字幕 (Python编程开发)
 
-<div width="100%"><iframe src="//player.bilibili.com/player.html?aid=333572725&bvid=BV1Sw411Z779&cid=351370524&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe></div>
+<iframe src="//player.bilibili.com/player.html?aid=333572725&bvid=BV1Sw411Z779&cid=351370524&page=1&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 100%; height: 30rem; max-width: 100%；align:center; padding:20px 0;"> </iframe>
