--- a/docs/04.视频分享/01.黑马程序员匠心之作C++教程从0到1入门编程,学习编程不再难.md
+++ b/docs/04.视频分享/01.黑马程序员匠心之作C++教程从0到1入门编程,学习编程不再难.md
@@ -9,5 +9,5 @@ tags:
 ---
 # 黑马程序员匠心之作|C++教程从0到1入门编程,学习编程不再难
 
-<iframe src="//player.bilibili.com/player.html?aid=41559729&bvid=BV1et411b73Z&cid=72978340&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<iframe src="//player.bilibili.com/player.html?aid=41559729&bvid=BV1et411b73Z&cid=72978340&page=1&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width: 100%; height: 30rem; max-width: 100%；align:center; padding:20px 0;"> </iframe>
 
