--- a/docs/02.软件分享/11.Windows/03.零成本、低门槛创建专属数据分析工具.md
+++ b/docs/02.软件分享/11.Windows/03.零成本、低门槛创建专属数据分析工具.md
@@ -6,7 +6,7 @@ categories:
   - 软件分享
   - Windows
 tags:
-  - 
+  - Windows
 ---
 
 ![img](https://cdn.sspai.com/2021/09/12/3cf77e62cc0052d189325d8943cdb4e0.png?imageMogr2/auto-orient/quality/95/thumbnail/!1420x708r/gravity/Center/crop/1420x708/interlace/1)
