--- a/docs/02.软件分享/11.Windows/04.App+1  小巧身板也能称心如意，可以 DIY 的 Windows 启动器：Keypirinha.md
+++ b/docs/02.软件分享/11.Windows/04.App+1  小巧身板也能称心如意，可以 DIY 的 Windows 启动器：Keypirinha.md
@@ -6,7 +6,7 @@ categories:
   - 软件分享
   - Windows
 tags:
-  - 
+  - Windows
 ---
 
 ![img](https://cdn.sspai.com/editor/u_/c4mocmlb34tcu4bur19g.jpg?imageMogr2/auto-orient/quality/95/thumbnail/!1420x708r/gravity/Center/crop/1420x708/interlace/1)
