--- a/docs/02.软件分享/11.Windows/05.App+1｜借 SmoothVideo Project 享受「丝般顺滑」的观影体验.md
+++ b/docs/02.软件分享/11.Windows/05.App+1｜借 SmoothVideo Project 享受「丝般顺滑」的观影体验.md
@@ -6,7 +6,7 @@ categories:
   - 软件分享
   - Windows
 tags:
-  - 
+  - Windows
 ---
 
 ![img](https://cdn.sspai.com/article/5a562282-e413-0555-4975-a5886a78d714.jpg?imageMogr2/auto-orient/quality/95/thumbnail/!1420x708r/gravity/Center/crop/1420x708/interlace/1)
