--- a/docs/02.软件分享/12.Android/02.Anytype 初探 可能不只是 Notion 离线版这么简单.md
+++ b/docs/02.软件分享/12.Android/02.Anytype 初探 可能不只是 Notion 离线版这么简单.md
@@ -6,7 +6,7 @@ categories:
   - 软件分享
   - Android
 tags:
-  - 
+  - Android
 ---
 
 ![img](https://cdn.sspai.com/2021/11/19/cf3695b4c67d4b7a1697fd1583ce663f.png?imageMogr2/auto-orient/quality/95/thumbnail/!1420x708r/gravity/Center/crop/1420x708/interlace/1)[![img](https://cdn.sspai.com//2020/07/15/03489f13d747077eafb9f844d842ed53.png)](javascript:;)
