--- a/docs/02.软件分享/12.Android/03.两款小工具，让 Windows 和 Android 也能推流音频到 AirPlay.md
+++ b/docs/02.软件分享/12.Android/03.两款小工具，让 Windows 和 Android 也能推流音频到 AirPlay.md
@@ -6,7 +6,7 @@ categories:
   - 软件分享
   - Android
 tags:
-  - 
+  - Android
 ---
 ![img](https://cdn.sspai.com/article/b5186db8-4628-c907-fa78-f1c0e5885647.png?imageMogr2/auto-orient/quality/95/thumbnail/!1420x708r/gravity/Center/crop/1420x708/interlace/1)
 
