--- a/docs/02.软件分享/12.Android/04.强大的欧美曲库助力，手感上乘的竖屏音游新作：Beatstar.md
+++ b/docs/02.软件分享/12.Android/04.强大的欧美曲库助力，手感上乘的竖屏音游新作：Beatstar.md
@@ -6,7 +6,7 @@ categories:
   - 软件分享
   - Android
 tags:
-  - 
+  - Android
 ---
 
 ![img](https://cdn.sspai.com/article/0d304081-df03-e89e-630c-bdcb0ede5431.gif?imageMogr2/auto-orient/quality/95/thumbnail/!1420x708r/gravity/Center/crop/1420x708/interlace/1)
