--- a/docs/02.软件分享/13.iOS/04.在争议声中更新的老牌密码管理工具，1Password 8 值得关注的新变化.md
+++ b/docs/02.软件分享/13.iOS/04.在争议声中更新的老牌密码管理工具，1Password 8 值得关注的新变化.md
@@ -6,7 +6,7 @@ categories:
   - 软件分享
   - iOS
 tags:
-  - 
+  - iOS
 ---
 
 ![img](https://cdn.sspai.com/article/6de2a6bd-730c-a59d-a2c5-24d40d1f2b41.png?imageMogr2/auto-orient/quality/95/thumbnail/!1420x708r/gravity/Center/crop/1420x708/interlace/1)
