完成分类页图片

--- a/docs/00.目录页/01.导航大全.md
+++ b/docs/00.目录页/01.导航大全.md
@@ -3,7 +3,7 @@ pageComponent:
   name: Catalogue
   data: 
     key: 01.导航大全
-    imgUrl: /img/web.png
+    imgUrl: https://cdn.jsdelivr.net/gh/LFJINGT/image-hosting/other.png
     description: 一些精品宝藏网站推荐
 title: 导航大全
 date: 2021-12-19 21:50:53
