--- a/docs/00.目录页/02.软件分享.md
+++ b/docs/00.目录页/02.软件分享.md
@@ -3,7 +3,7 @@ pageComponent:
   name: Catalogue
   data: 
     key: 02.软件分享
-    imgUrl: /img/ui.png
+    imgUrl: https://cdn.jsdelivr.net/gh/LFJINGT/image-hosting/more.png
     description: Windows，Android，iOS等平台精品软件推荐
 title: 软件分享
 date: 2021-12-19 21:50:54
