--- a/docs/00.目录页/04.视频分享.md
+++ b/docs/00.目录页/04.视频分享.md
@@ -3,7 +3,7 @@ pageComponent:
   name: Catalogue
   data: 
     key: 04.视频分享
-    imgUrl: /img/more.png
+    imgUrl: https://cdn.jsdelivr.net/gh/LFJINGT/image-hosting/ui.png
     description: 学习、教程、在线工具等视频
 title: 视频分享
 date: 2021-12-19 21:50:56
