--- a/docs/00.目录页/03.文章分享.md
+++ b/docs/00.目录页/03.文章分享.md
@@ -3,7 +3,7 @@ pageComponent:
   name: Catalogue
   data: 
     key: 03.文章分享
-    imgUrl: /img/other.png
+    imgUrl: https://cdn.jsdelivr.net/gh/LFJINGT/image-hosting/python.png
     description: 技术文档、教程、技巧、总结等文章
 title: 文章分享
 date: 2021-12-19 21:50:55
