--- a/docs/02.软件分享/11.Windows/02.沉浸式抒写、操作便捷的 Markdown 简历工具—— 木及简历.md
+++ b/docs/02.软件分享/11.Windows/02.沉浸式抒写、操作便捷的 Markdown 简历工具—— 木及简历.md
@@ -9,15 +9,16 @@ tags:
   - Windows
 ---
 
-![img](https://cdn.sspai.com/2021/09/15/5eb3493d9482a60d9480eafb65b6a7c7.jpg?imageMogr2/auto-orient/quality/95/thumbnail/!1420x708r/gravity/Center/crop/1420x708/interlace/1)
+![image-20210911213706595](https://cdn.sspai.com/2021/09/15/article/131e20aba66174e2f94876b52fe1ac00?imageView2/2/w/1120/q/90/interlace/1/ignore-error/1)
 
-# 沉浸式抒写、操作便捷的 Markdown 简历工具—— 木及简历
+
+![logo](https://cdn.sspai.com/2021/09/15/5eb3493d9482a60d9480eafb65b6a7c7.jpg?imageMogr2/auto-orient/quality/95/thumbnail/!1420x708r/gravity/Center/crop/1420x708/interlace/1)
 
 **木及简历**是一个免费的在线 Markdown 简历制作网站，致力于**让你能以更简单的方式写好简历**。木及简历上线 5 个月到目前累计已导出 10000+ 份简历。尽管可能还是一个不够成熟的产品，但在大量用户的反馈和建议中不断成长着，一直在保持着稳定的更新迭代。
 
 在线地址：https://www.mujicv.com/
 
-![image-20210911213706595](https://cdn.sspai.com/2021/09/15/article/131e20aba66174e2f94876b52fe1ac00?imageView2/2/w/1120/q/90/interlace/1/ignore-error/1)
+
 
 ## **诞生的契机**
 
