修改一些信息

--- a/docs/05.关于/01.关于.md
+++ b/docs/05.关于/01.关于.md
@@ -6,7 +6,7 @@ sidebar: false
 article: false
 ---
 
-## 📚Blog
+## 📚YuanJi
 这是一个兼具文档查找、软件分享、视频分享的网站，主要内容是计算机科学的知识分享。如果你喜欢这个网站欢迎到[GitHub](https://github.com/LFJINGT/UQequation)点个Star ( •̀ ω •́ )✧
 
 
